--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
     <div class="container-md">
       <div class="row g-3 justify-content-center align-items-center pt-5">
         <div class="col-md-5 text-center text-md-start">
-          <img src="/Tim Hanson About.png" class="img-fluid" alt="Me">
+          <img src="Images/Tim Hanson About.png" class="img-fluid" alt="Me">
           <p class="text-weight-normal mt-3">
             My name is Tim Hanson. I am a UX Designer based in Brooklyn, NY. 
             Originally from Des Moines, Iowa, I earned my degree in business administration and marketing from Grand View University. 
@@ -82,7 +82,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <p class="col-md-4 mb-0 text-body-secondary nav-link">tim.hanson73@gmail.com</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
       <a target="_blank" href="https://drive.google.com/file/d/16ymK9D8iD5cbcXJjXBTTtQ6rTsiw3byO/view?usp=sharing" class="nav-link px-2 text-body-secondary">Resume</a>
