--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
   <nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: #ffffff;"> 
     <div class="container-xxl">
     
-      <a class="navbar-brand" href="Home.html">        
+      <a class="navbar-brand" href="index.html">        
         <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">        
       </a>
       
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="Home.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#work" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -82,7 +82,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <p class="col-md-4 mb-0 text-body-secondary nav-link">tim.hanson73@gmail.com</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
+        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
       <a target="_blank" href="https://drive.google.com/file/d/16ymK9D8iD5cbcXJjXBTTtQ6rTsiw3byO/view?usp=sharing" class="nav-link px-2 text-body-secondary">Resume</a>
