--- a/MobileNavigation.html
+++ b/MobileNavigation.html
@@ -17,7 +17,7 @@
   <nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: #ffffff;"> 
     <div class="container-xxl">
     
-      <a class="navbar-brand" href="Home.html">        
+      <a class="navbar-brand" href="index.html">        
         <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">        
       </a>
       
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="Home.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#work" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
