--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Navbar -->
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-white">
     <div class="container-xxl">
-      <a class="navbar-brand" href="Home.html">
+      <a class="navbar-brand" href="index.html">
         <img src="/Images/Tim Hanson Logo.png Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="Home.html">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#work" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Work</a>
