--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <div class="container-xxl">
     
       <a class="navbar-brand" href="index.html">        
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">        
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">        
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +82,7 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <p class="col-md-4 mb-0 text-body-secondary nav-link">tim.hanson73@gmail.com</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
       <a target="_blank" href="https://drive.google.com/file/d/16ymK9D8iD5cbcXJjXBTTtQ6rTsiw3byO/view?usp=sharing" class="nav-link px-2 text-body-secondary">Resume</a>
