--- a/MobileNavigation.html
+++ b/MobileNavigation.html
@@ -18,7 +18,7 @@
     <div class="container-xxl">
     
       <a class="navbar-brand" href="index.html">        
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">        
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">        
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
     <div class="container-lg">
       <div class="h-75 row g-5 justify-content-center align-items-center pt-5">
         <div class="col-md-5 text-center d-none d-md-block">
-          <img src="/Mobile Screens.png" class="img-fluid" alt="Me">
+          <img src="Images/Mobile Screens.png" class="img-fluid" alt="Me">
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
     <div class="container d-flex flex-wrap justify-content-between align-items-center">
       <p class="col-md-4 mb-0 text-muted">tim.hanson73@gmail.com</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item">
