--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -14,7 +14,7 @@
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-white">
     <div class="container-xxl">
       <a class="navbar-brand" href="index.html">
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
     <div class="container-lg">
       <div class="justify-content-center align-items-center">
         <div class="image-container">
-          <img src="Before&after.png" class="img-fluid" alt="Before & After">
+          <img src="Images/Before&after.png" class="img-fluid" alt="Before & After">
         </div>
         <h1>
           <div class="display-4">Nonprofit Website Redesign</div>
@@ -141,8 +141,8 @@
         <div class="display-6 text-muted">Heuristic Evaluation</div>
       </h1>
       <div class="text-center">
-        <img src="Screen Shot 2021-10-26 at 6_02_35 PM.webp" class="img-fluid border border-3 rounded me-5" alt="Desktop Website">
-        <img src="Screen Shot 2021-10-26 at 6_03_41 PM.webp" class="img-fluid border border-3 rounded" alt="Desktop Website">
+        <img src="Images/Screen Shot 2021-10-26 at 6_02_35 PM.webp" class="img-fluid border border-3 rounded me-5" alt="Desktop Website">
+        <img src="Images/Screen Shot 2021-10-26 at 6_03_41 PM.webp" class="img-fluid border border-3 rounded" alt="Desktop Website">
       </div>
       <div class="text-center pt-5">
         <p class="mb-4 centered-text">To kick things off, I conducted a heuristic evaluation of the museum's existing website. While it had all of the necessary information, its user experience fell short. Issues included inconsistent formatting, inadequate use of white space, and an overall unfriendly layout that failed to create an inviting online space. The website, in its current state, did not inspire a desire to spend extended periods exploring it, deterring potential museum visits. Determined to transform website visitors into museum attendees, my redesign focused on improving user engagement. The screenshots above depict the homepage and top navigation, revealing formatting issues such as an oversized logo and irregularities in the top navigation bar. Delving deeper, I identified problems such as text overlap and outdated content, reinforcing the need for both structural and aesthetic enhancements.</p>
@@ -254,7 +254,7 @@
     </div>
     <div class="row">
       <div class="col-12 image-container">
-        <img src="Affinity Diagram.png" alt="Affinity Diagram" class="img-fluid border border-3 rounded me-5">
+        <img src="Images/Affinity Diagram.png" alt="Affinity Diagram" class="img-fluid border border-3 rounded me-5">
         <div class="image-caption">
           <p>Here, you'll find insights from my user interviews organized into groups based on relationships and commonalities.</p>
         </div>
@@ -262,7 +262,7 @@
     </div>
     <div class="row">
       <div class="col-12 image-container">
-        <img src="Empathy Map.png" alt="Empathy Map" class="img-fluid border border-3 rounded me-5">
+        <img src="Images/Empathy Map.png" alt="Empathy Map" class="img-fluid border border-3 rounded me-5">
         <div class="image-caption">
           <p>Here you can observe the evolution of the interview insights into an empathy map. This served as the foundation for creating a comprehensive and detailed user persona.</p>
         </div>
@@ -279,7 +279,7 @@
         <div class="display-6">User Persona</div>
       </h1>
       <div class="col-12 image-container">
-        <img src="User Persona.png" alt="User Persona" class="img-fluid border border-3 rounded me-5">
+        <img src="Images/User Persona.png" alt="User Persona" class="img-fluid border border-3 rounded me-5">
         <div class="image-caption">
           <p>The user persona that was created from the affinity diagram and empathy map.</p>
         </div>
@@ -296,7 +296,7 @@
       <div class="display-6 text-muted">Storyboard</div>
     </h1>
     <div class="text-center image-container">
-      <img src="Storyboard.png" class="img-fluid border border-3 rounded me-5" alt="Storyboard">
+      <img src="Images/Storyboard.png" class="img-fluid border border-3 rounded me-5" alt="Storyboard">
       <div class="image-caption">
         <p>With a solidified user persona, I proceeded to develop a storyboard. The following narrative illustrates Janet's challenges with the existing website and demonstrates how my redesign effectively addresses and solves those issues.</p>
       </div>
@@ -402,7 +402,7 @@
     </div>
     <p>Next, I crafted a value proposition for the redesign: "I am undertaking the redesign of the Telluride Historical Museum's website to facilitate a straightforward and efficient process for potential visitors to locate and access relevant information, aiding them in deciding whether to visit the museum or not." This, combined with the value proposition canvas, shows how the redesign aims to enhance the visitor experience on the website.</p>
     <div class="image-container">
-      <img src="Value Proposition.png" class="img-fluid border border-3 rounded me-5" alt="Value Proposition">
+      <img src="Images/Value Proposition.png" class="img-fluid border border-3 rounded me-5" alt="Value Proposition">
     </div>
   </section>
 
@@ -414,7 +414,7 @@
       <div class="display-6 text-muted">Sitemap</div>
     </h1>
     <div class="d-flex justify-content-center mb-4">
-      <img src="Sitemap.png" class="img-fluid border border-3 rounded" alt="Sitemap" style="max-width: 300px;">
+      <img src="Images/Sitemap.png" class="img-fluid border border-3 rounded" alt="Sitemap" style="max-width: 300px;">
     </div>
     <div class="d-flex justify-content-center">
       <p class="text-start" style="max-width: 750px;">With a clear vision of the website's user-centric goals, I initiated the process of structuring the redesign. Beginning with card sorting, I deconstructed the existing navigation structure and reconstructed it to enhance user-friendliness. This involved eliminating duplicate pages, inactive links, and obsolete event pages from years past. The resulting site structure streamlined pathways and removed unnecessary pages, enabling users to efficiently research the museum, its attractions, prices, guidelines, and more. The revamped structure, coupled with a new aesthetic, aimed to present the museum in a more serious and professional light.</p>
@@ -437,16 +437,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="3 Task Flows.png" srcset="3 Task Flows.png 750w, 3 Task Flows@2x.png 1500w" class="d-block w-100" alt="Image 1" loading="lazy">
+            <img src="Images/3 Task Flows.png" srcset="3 Task Flows.png 750w, 3 Task Flows@2x.png 1500w" class="d-block w-100" alt="Image 1" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="User Flow 1.png" srcset="User Flow 1.png 750w, User Flow 1@2x.png 1500w" class="d-block w-100" alt="Image 2" loading="lazy">
+            <img src="Images/User Flow 1.png" srcset="User Flow 1.png 750w, User Flow 1@2x.png 1500w" class="d-block w-100" alt="Image 2" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="User Flow 2.png" srcset="User Flow 2.png 750w, User Flow 2@2x.png 1500w" class="d-block w-100" alt="Image 3" loading="lazy">
+            <img src="Images/User Flow 2.png" srcset="User Flow 2.png 750w, User Flow 2@2x.png 1500w" class="d-block w-100" alt="Image 3" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="User Flow 3.png" srcset="User Flow 3.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 4" loading="lazy">
+            <img src="Images/User Flow 3.png" srcset="User Flow 3.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 4" loading="lazy">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
@@ -477,22 +477,22 @@
           <div class="grid">
             <div class="grid-item">
               <a href="Low Fi 1.png" target="_blank">
-                <img src="Low Fi 1.png" class="img-fluid" alt="Image 1" loading="lazy">
+                <img src="Images/Low Fi 1.png" class="img-fluid" alt="Image 1" loading="lazy">
               </a>
             </div>
             <div class="grid-item">
               <a href="Mid Fi 1.png" target="_blank">
-                <img src="Mid Fi 1.png" class="img-fluid" alt="Image 3" loading="lazy">
+                <img src="Images/Mid Fi 1.png" class="img-fluid" alt="Image 3" loading="lazy">
               </a>
             </div>
             <div class="grid-item">
               <a href="Mid Fi 2.png" target="_blank">
-                <img src="Mid Fi 2.png" class="img-fluid" alt="Image 4" loading="lazy">
+                <img src="Images/Mid Fi 2.png" class="img-fluid" alt="Image 4" loading="lazy">
               </a>
             </div>
             <div class="grid-item">
               <a href="Mid Fi 3.png" target="_blank">
-                <img src="Mid Fi 3.png" class="img-fluid" alt="Image 5" loading="lazy">
+                <img src="Images/Mid Fi 3.png" class="img-fluid" alt="Image 5" loading="lazy">
               </a>
             </div>
           </div>
@@ -523,25 +523,25 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Telluride Blanket.png" srcset="Telluride Blanket.png 750w, 3 Task Flows@2x.png 1500w" class="d-block w-100" alt="Image 1" loading="lazy">
+            <img src="Images/Telluride Blanket.png" srcset="Telluride Blanket.png 750w, 3 Task Flows@2x.png 1500w" class="d-block w-100" alt="Image 1" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="Brand Logo.png" srcset="Brand Logo.png 750w, User Flow 1@2x.png 1500w" class="d-block w-100" alt="Image 2" loading="lazy">
+            <img src="Images/Brand Logo.png" srcset="Brand Logo.png 750w, User Flow 1@2x.png 1500w" class="d-block w-100" alt="Image 2" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="Iconography.png" srcset="Iconography.png 750w, User Flow 2@2x.png 1500w" class="d-block w-100" alt="Image 3" loading="lazy">
+            <img src="images/Iconography.png" srcset="Iconography.png 750w, User Flow 2@2x.png 1500w" class="d-block w-100" alt="Image 3" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="Button States.png" srcset="Button States.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 4" loading="lazy">
+            <img src="Images/Button States.png" srcset="Button States.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 4" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="Color Palette.png" srcset="Color Palette.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 5" loading="lazy">
+            <img src="Images/Color Palette.png" srcset="Color Palette.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 5" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="Image Samples.png" srcset="Image Samples.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 6" loading="lazy">
+            <img src="Images/Image Samples.png" srcset="Image Samples.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 6" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="Design System.png" srcset="Design System.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 7" loading="lazy">
+            <img src="Images/Design System.png" srcset="Design System.png 750w, User Flow 3@2x.png 1500w" class="d-block w-100" alt="Image 7" loading="lazy">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -569,7 +569,7 @@
         <div class="display-6">High Fidelity Prototype</div>
       </h1>
       <div class="col-12 image-container">
-        <img src="High Fidelity.png" alt="High Fidelity">
+        <img src="Images/High Fidelity.png" alt="High Fidelity">
       </div>
       <div class="container">
         <div class="row justify-content-center">
@@ -608,7 +608,7 @@
     <div class="container d-flex flex-wrap justify-content-between align-items-center">
       <p class="col-md-4 mb-0 text-muted">tim.hanson73@gmail.com</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <img src="/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
+        <img src="Images//Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item">
