--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="card mx-3" style="width: 25rem;">
           <div class="card-body text-left py-4">
-            <img src="Images/" class="img-fluid" alt="Website Redesign">
+            <img src="Images/Telluride.png" class="img-fluid" alt="Website Redesign">
             <h4 class="card-title">Nonprofit Website Redesign</h4>
             <p class="card-text text-muted d-none d-lg-block">Improved a museum's website to better suit responsive web design standards.</p>
             <a href="WebsiteRedesign.html" class="btn btn-primary btn-lg mt-3">Read More</a>
