--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -608,11 +608,11 @@
     <div class="container d-flex flex-wrap justify-content-between align-items-center">
       <p class="col-md-4 mb-0 text-muted">tim.hanson73@gmail.com</p>
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-        <img src="Images//Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item">
-          <a target="_blank" href="https://drive.google.com/file/d/16ymK9D8iD5cbcXJjXBTTtQ6rTsiw3byO/view?usp=sharing" class="nav-link px-2 text-muted">Resume</a>
+          <a target="_blank" href="https://drive.google.com/file/d/1JpGSUzzTLl3YSNm2XVbBO8LnKZVIdicu/view?usp=sharing" class="nav-link px-2 text-muted">Resume</a>
         </li>
       </ul>
     </div>
