--- a/About.html
+++ b/About.html
@@ -78,17 +78,19 @@
     </div>
   </section>
   
-  <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0 text-body-secondary nav-link">tim.hanson73@gmail.com</p>
-      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Me" width="110" height="77">
+  <footer class="bg-light py-3 mt-5 border-top">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center">
+      <p class="col-md-4 mb-0 text-muted">tim.hanson73@gmail.com</p>
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <ul class="nav col-md-4 justify-content-end">
-      <a target="_blank" href="https://drive.google.com/file/d/16ymK9D8iD5cbcXJjXBTTtQ6rTsiw3byO/view?usp=sharing" class="nav-link px-2 text-body-secondary">Resume</a>
+        <li class="nav-item">
+          <a target="_blank" href="https://drive.google.com/file/d/1JpGSUzzTLl3YSNm2XVbBO8LnKZVIdicu/view?usp=sharing" class="nav-link px-2 text-muted">Resume</a>
+        </li>
       </ul>
-    </footer>
-  </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
