--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-white">
     <div class="container-xxl">
       <a class="navbar-brand" href="index.html">
-        <img src="Images/Tim Hanson Logo.png Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
+        <img src="Images/Tim Hanson Logo.png" class="img-fluid" alt="Logo" width="110" height="77">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
