Fixed some sizing

--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -511,7 +511,7 @@
       <h1 class="text-center mb-3">
         <span class="display-6 text-muted">Style Guide & Inspiration</span>
       </h1>
-      <div id="carouselExampleIndicators2" class="carousel slide">
+      <div id="carouselExampleIndicators2" class="carousel slide centered-container" style="max-width: 750px;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -567,8 +567,8 @@
     <div class="row">
       <h1 class="text-center">
         <div class="display-6">High Fidelity Prototype</div>
-      </h1>
-      <div class="col-12 image-container">
+      </h1> 
+      <div class="col-12 image-container centered-container" style="max-width: 1000px;">
         <img src="Images/High Fidelity.png" alt="High Fidelity">
       </div>
       <div class="container">
