--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -428,7 +428,7 @@
       <h1 class="text-center mb-3">
         <span class="display-6 text-muted">Task & User Flows</span>
       </h1>
-      <div id="carouselExampleIndicators1" class="carousel slide">
+      <div id="carouselExampleIndicators1" class="carousel slide centered-container" style="max-width: 750px;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></button>
