--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -422,7 +422,7 @@
   </div>
 </section>
 
-  <!-- Task & User Flows -->
+  <!-- Task & User Flows --> 
   <section id="ImageCarousel1" class="py-3">
     <section class="container">
       <h1 class="text-center mb-3">
@@ -581,8 +581,10 @@
             </div>
             <div class="text-start">
               <p class="mb-4" style="max-width: 1000px;">
-                The finished product represents a significant departure from the museum's original website. This updated redesign aims to better encapsulate the museum's offerings in a clean, simple, and modern manner. Stripped of unnecessary embellishments, it provides visitors with essential information through straightforward navigation and an updated, clean aesthetic.
-                Choosing to undertake this project individually imposed a more substantial workload compared to classmates working in groups. Despite moments of uncertainty about completing the project within the timeline, I successfully wrapped up the entire endeavor and presented a finished project to my class. This project holds a special place for me, as it stands out as my favorite work from the six-month bootcamp course. The final desktop prototype can be viewed <a href="https://www.figma.com/proto/S1yKRUCTlRmuxNDIhT6OjC/Hi-Fi-Prototyping%2C-Group-Project-2?page-id=0%3A1&node-id=2-174&viewport=243%2C48%2C0.1&scaling=min-zoom&starting-point-node-id=2%3A174" target="_blank">here</a>, and the mobile version is accessible <a href="https://www.figma.com/proto/S1yKRUCTlRmuxNDIhT6OjC/Hi-Fi-Prototyping%2C-Group-Project-2?page-id=0%3A1&node-id=2-613&viewport=243%2C48%2C0.2&scaling=min-zoom&starting-point-node-id=2%3A613" target="_blank">here</a>.
+                The finished product represents a significant departure from the museum's original website. 
+                This updated redesign aims to better encapsulate the museum's offerings in a clean, simple, and modern manner. 
+                Stripped of unnecessary embellishments, it provides visitors with essential information through straightforward navigation and an updated, clean aesthetic.
+                The final desktop prototype can be viewed <a href="https://www.figma.com/proto/S1yKRUCTlRmuxNDIhT6OjC/Hi-Fi-Prototyping%2C-Group-Project-2?page-id=0%3A1&node-id=2-174&viewport=243%2C48%2C0.1&scaling=min-zoom&starting-point-node-id=2%3A174" target="_blank">here</a>, and the mobile version is accessible <a href="https://www.figma.com/proto/S1yKRUCTlRmuxNDIhT6OjC/Hi-Fi-Prototyping%2C-Group-Project-2?page-id=0%3A1&node-id=2-613&viewport=243%2C48%2C0.2&scaling=min-zoom&starting-point-node-id=2%3A613" target="_blank">here</a>.
               </p>
             </div>
           </div>
