--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -42,7 +42,7 @@
 
   <!-- Intro Section -->
   <section id="intro">
-    <div class="container-lg">
+    <div class="container-lg mb-4">
       <div class="justify-content-center align-items-center">
         <div class="image-container">
           <img src="Images/Before&after.png" class="img-fluid" alt="Before & After">
@@ -53,13 +53,10 @@
         </h1>
       </div>
     </div>
-  </section>
-
-  <section class="navigation-buttons py-3">
-    <h4 class="text-center">
-      <div class="mb-4 j">Jump To:</div>
-    </h4>
     <div class="container text-center">
+      <h4 class="text-center mt-3">
+        <div">Jump To:</div>
+      </h4>
         <div class="card-body d-flex flex-column align-items-center">
           <a href="#Phase1" class="btn custom-btn my-2">Phase 1: Research & Analysis</a>
           <a href="#Phase2" class="btn custom-btn my-2">Phase 2: Planning & Strategy</a>
