--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -47,7 +47,7 @@
         <div class="image-container">
           <img src="Images/Before&after.png" class="img-fluid" alt="Before & After">
         </div>
-        <h1>
+        <h1 class="text-center">
           <div class="display-4">Nonprofit Website Redesign</div>
           <div class="display-6 text-muted">UX/UI Design Case Study</div>
         </h1>
