Mobile Navigation Page

--- a/MobileNavigation.html
+++ b/MobileNavigation.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tim Hanson - Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
   <style>
     section{
-      padding: 60px 0;
+      padding: 10px 0;
     }
   </style>
 </head>
@@ -42,16 +43,65 @@
     </div>
   </nav>
   
-  <section id="intro">
+   <!-- Intro Section -->
+   <section id="intro">
+    <div class="container-lg mb-2">
+      <div class="justify-content-center align-items-center">
+        <div class="image-container">
+          <img src="Images/Mobile Screens.png" class="img-fluid" alt="Mobile Updates">
+        </div>
+        <h1 class="text-center">
+          <div class="display-4">Consistency Updates for Mobile Navigation</div>
+          <div class="display-6 text-muted">UX/UI Professional Work</div>
+        </h1>
+      </div>
+    </div>
+  </section>
+
+   <!-- Writing -->
+   <section id="Phase1">
     <div class="container-lg">
-      <div class="h-75 row g-5 justify-content-center align-items-center pt-5">
-        <div class="col-md-5 text-center d-none d-md-block">
-          <img src="Images/Mobile Screens.png" class="img-fluid" alt="Me">
+      <div class="text-center pt-5">
+        <p class="mb-4 centered-text" style="width: 750px;">
+          Over the past few years, my company has been working on a new design system. 
+          It was designed in tandem with a new system we have been developing for insurance agents. 
+          As our team has been maintaining and updating the design system we have been looking for opportunities where we can implement it in existing systems to improve consistency.
+          We saw an opportunity to update the mobile navigation across multiple websites to make them consistent with the new design systema and with each other.
+        </p>
+        <div class="container-lg mb-4">
+          <div class="justify-content-center align-items-center">
+            <div class="image-container">
+              <img src="Images/Mobile Navigations.png" class="img-fluid" alt="Mobile Updates" style="width: 750px;">
+            </div>
+          </div>
+        </div>
+        <p class="mb-4 centered-text" style="width: 750px;"> 
+          Our intranet, agent portal, and public website all had different navigation systems. There navigation is shown in the image above.  
+          The first two utilized our design system, but in different ways. 
+          The public website didn't match at all.
+          Researching the best practices for mobile navigation, we decided to implement a sequential navigation system across all three sites. 
+          It seemed the best way to display several categories and subcategories on a small screen. The new menu is shown below implemented on our intranet. You can also click through a prototype of it on our public website <a href="https://www.figma.com/proto/QCKCqe41ybUlQqXwDiKeJw/Mobile-Navigation-Project?page-id=0%3A1&node-id=1-816&viewport=906%2C428%2C0.1&t=EIKq2WsiJoNVRAyx-1&scaling=min-zoom&content-scaling=fixed">here</a>.
+        </p>
+        <div class="container-lg mb-4">
+          <div class="justify-content-center align-items-center">
+            <div class="image-container">
+              <img src="Images/Updated Mobile Nav.png" class="img-fluid" alt="Mobile Updates" style="width: 750px;">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-  
+
+<!-- The End -->
+<section id="TheEnd">
+  <div class="container-lg">
+    <h1 class="text-center mb-4">
+      <div class="display-4">The End</div>
+    </h1>
+  </div>
+</section>
+
   <footer class="bg-light py-3 mt-5 border-top">
     <div class="container d-flex flex-wrap justify-content-between align-items-center">
       <p class="col-md-4 mb-0 text-muted">tim.hanson73@gmail.com</p>
