--- a/WebsiteRedesign.html
+++ b/WebsiteRedesign.html
@@ -596,7 +596,7 @@
 <section id="TheEnd">
   <div class="container-lg">
     <h1 class="text-center mb-4">
-      <div class="display-4">The End</div>
+      <div class="display-4">End</div>
     </h1>
   </div>
 </section>
