--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="Images/Mobile Screens.png" class="img-fluid" alt="Mobile Navigation">
             <h4 class="card-title">Mobile Navigation</h4>
             <p class="card-text text-muted d-none d-lg-block">Created consistent mobile navigation across three company websites.</p>
-            <a href="MobileNavigation.html" class="btn btn-primary btn-lg mt-3">Read More</a>
+            <a href="MobileNavigation.html" class="btn custom-btn mt-3">Read More</a>
           </div>
         </div>
         <div class="card mx-3" style="width: 25rem;">
@@ -81,7 +81,7 @@
             <img src="Images/Telluride.png" class="img-fluid" alt="Website Redesign">
             <h4 class="card-title">Nonprofit Website Redesign</h4>
             <p class="card-text text-muted d-none d-lg-block">Improved a museum's website to better suit responsive web design standards.</p>
-            <a href="WebsiteRedesign.html" class="btn btn-primary btn-lg mt-3">Read More</a>
+            <a href="WebsiteRedesign.html" class="btn custom-btn mt-3">Read More</a>
           </div>
         </div>
       </div>
