--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
         <div class="card mx-3" style="width: 25rem;">
           <div class="card-body text-left py-4">
             <img src="Images/Mobile Screens.png" class="img-fluid" alt="Mobile Navigation">
+            <h4 class="card-title">Old System Update</h4>
+            <p class="card-text text-muted d-none d-lg-block">Updated my company's outdated insured portal with our design system.</p>
+            <a href="MyPolicy+Redesign.html" class="btn custom-btn mt-3">Read More</a>
+          </div>
+        </div>
+        <div class="card mx-3" style="width: 25rem;">
+          <div class="card-body text-left py-4">
+            <img src="Images/Mobile Screens.png" class="img-fluid" alt="Mobile Navigation">
             <h4 class="card-title">Mobile Navigation</h4>
             <p class="card-text text-muted d-none d-lg-block">Created consistent mobile navigation across three company websites.</p>
             <a href="MobileNavigation.html" class="btn custom-btn mt-3">Read More</a>
