--- a/MyPolicy+Redesign.html
+++ b/MyPolicy+Redesign.html
@@ -40,7 +40,95 @@
     </div>
   </nav>
  
- 
+ <!-- Intro Section -->
+  <section id="intro">
+    <div class="container-lg mb-4">
+      <div class="justify-content-center align-items-center">
+        <div class="image-container">
+          <img src="Images/Before&after.png" class="img-fluid" alt="Before & After">
+        </div>
+        <h1 class="text-center">
+          <div class="display-4">Old System Update</div>
+          <div class="display-6 text-muted">UX/UI Professional Work</div>
+        </h1>
+      </div>
+    </div>
+    <div class="container text-center">
+      <h4 class="text-center mt-3">
+        <div">Jump To:</div>
+      </h4>
+        <div class="card-body d-flex flex-column align-items-center">
+          <a href="#Phase1" class="btn custom-btn my-2">Phase 1: Research & Analysis</a>
+          <a href="#Phase2" class="btn custom-btn my-2">Phase 2: Planning & Strategy</a>
+          <a href="#Phase3" class="btn custom-btn my-2">Phase 3: Prototyping & Testing</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Work Section -->
+ <section class="bg-light py-3 py-md-5 py-xl-8">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="container-fluid">
+          <div class="row custom-row-spacing gy-3 gy-md-4">
+            <!-- Overview -->
+            <div class="col-12 col-md-8">
+              <div class="card-body text-left p-4 p-xxl-5">
+                <h4 class="mb-4">Overview</h4>
+                <p class="mb-4">In this project I was tasked with selecting a nonprofit with an outdated website and redesigning it to better suit responsive web design standards. I chose the Telluride Historical Museum. I undertook a comprehensive redesign of their website, modernizing the aesthetic, improving its navigation and functionality, while making it more accessible and responsive.</p>
+              </div>
+            </div>
+            <!-- Tools Used -->
+            <div class="col-12 col-md-4">
+              <div class="card-body text-right p-4 p-xxl-5">
+                <h4 class="mb-4">Tools Used</h4>
+                <ul class="list-unstyled">
+                  <li>Figma</li>
+                  <li>Invision</li>
+                  <li>Miro</li>
+                  <li>Google Workspace</li>
+                </ul>
+              </div>
+            </div>
+            <!-- Problem -->
+            <div class="col-12 col-md-8">
+              <div class="card-body text-left p-4 p-xxl-5">
+                <h4 class="mb-4">Problem</h4>
+                <p class="mb-4">While exploring nonprofits in Colorado (where I lived at the time), I came across the Telluride Historical Museum. Their website was out of date aesthically and not very functional across different devices. The lack of responsive design made it difficult to navigate and access important information across desktop, mobile, and tablet devices.</p>
+              </div>
+            </div>
+            <!-- Role -->
+            <div class="col-12 col-md-4">
+              <div class="card-body text-right p-4 p-xxl-5">
+                <h4 class="mb-4">Role</h4>
+                <ul class="list-unstyled">
+                  <li>UX Researcher</li>
+                  <li>UX Designer</li>
+                  <li>UI Designer</li>
+                </ul>
+              </div>
+            </div>
+            <!-- Solution -->
+            <div class="col-12 col-md-8">
+              <div class="card-body text-left p-4 p-xxl-5">
+                <h4 class="mb-4">Solution</h4>
+                <p class="mb-4">A responsive website redesign that aims to provide a more engaging and streamlined experience for visitors, with the goal of seamlessly delivering information and encouraging them to transition from online engagement to in-person museum visits.</p>
+              </div>
+            </div>
+            <!-- Timeline -->
+            <div class="col-12 col-md-4">
+              <div class="card-body text-right p-4 p-xxl-5">
+                <h4 class="mb-4">Timeline</h4>
+                <p>Three weeks.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
  
  
  
